# holostore

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
crates/holo_accord/: Cargo.toml
crates/holo_accord/src/: accord.rs  lib.rs
crates/holo_accord/src/accord/: group.rs  state.rs  types.rs
crates/holo_fusion/: Cargo.toml  README.md
crates/holo_fusion/docs/: DATA_FUSION.md  DATA_FUSION_TODO.md  DISTRIBUTED_SQL_EXECUTION_DESIGN.md  DOCUMENT_QUERY_OPTIMIZER_DESIGN.md  HOLO_FUSION_INDEXING.md  HOLO_FUSION_RUNBOOK.md  HOLO_FUSION_SQL_SCOPE.md  HOLO_FUSION_STORAGE_MODEL.md  HOLO_FUSION_TODO.md  METADATA_MIGRATION.md  PHASE7_BENCHMARK_SLO.md  PHASE9_SALES_FACTS_CANARY_SLO.md  SECONDARY_INDEX_OPTIMIZATIONS_COMMIT.md
crates/holo_fusion/scripts/: start_cluster.sh  stop_cluster.sh
crates/holo_fusion/scripts/benchmarks/: README.md  docker-compose.cockroach.yml  insert.sql  run_pgbench_suite.sh  run_phase9_sales_facts_canary.sh  schema.sql  select.sql  start_cockroach_cluster.sh  stop_cockroach_cluster.sh  update.sql
crates/holo_fusion/src/: ballista_codec.rs  catalog.rs  lib.rs  main.rs  metadata.rs  metrics.rs  mutation.rs  pg_catalog_ext.rs  pg_compat.rs  provider.rs  topology.rs
crates/holo_fusion/src/indexing/: keys.rs  metadata.rs  mod.rs
crates/holo_fusion/src/optimizer/: cost.rs  feedback.rs  learned.rs  mod.rs  planner.rs  predicates.rs  stats.rs
crates/holo_fusion/tests/: bench_slo.rs  distributed.rs  smoke.rs
crates/holo_store/: Cargo.toml  build.rs
crates/holo_store/docs/: CLUSTER_MEMBERSHIP.md  DESIGN.md  LINEARIZABILITY.md  RAFT_ENGINE_WAL.md  READ_MODES.md  STORAGE.md
crates/holo_store/proto/: holo.proto
crates/holo_store/src/: cluster.rs  kv.rs  lib.rs  load.rs  main.rs  meta_manager.rs  packed_batch.rs  range_manager.rs  rebalance_manager.rs  redis_server.rs  rpc_service.rs  transport.rs  wal.rs
crates/holo_store/tests/: accord_read_barrier.rs  meta_plane_autosplit.rs  meta_plane_failover.rs  meta_plane_faults.rs  multi_node_crash.rs  range_merge.rs  range_merge_controls.rs  range_merge_recovery.rs  range_split.rs  snapshot_recovery.rs  wal_crash.rs  wal_durability_fault.rs
crates/holo_store/tests/common/: mod.rs
crates/holo_workload/: Cargo.toml
crates/holo_workload/src/: main.rs
docs/: CLUSTER_MEMBERSHIP.md  DESIGN.md  LINEARIZABILITY.md  RAFT_ENGINE_WAL.md  TESTING_TODO.md
scripts/: check_linearizability.sh  check_linearizability_stress.sh  check_meta_plane_health.sh  check_read_minority.sh  cleanup_cluster.sh  monitor_cluster.sh  porcupine.sh  run_tests.sh  start_cluster.sh
tools/porcupine_check/: go.mod  go.sum  main.go
