[package]
name = "holo_store"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "holo-store"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
crc32fast = "1"
futures-util = "0.3"
fjall = "2.11"
holo_accord = { path = "../holo_accord" }
pilota = "0.13"
prost = "0.13"
redis-protocol = { version = "6", features = ["codec"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"
mimalloc = { version = "0.1", optional = true }

volo = "0.12"
volo-grpc = "0.12"

[build-dependencies]
volo-build = "0.12"

[features]
mimalloc = ["dep:mimalloc"]
